typescript/checker/tests/conformance/classes/members/accessibility/classPropertyAsPrivate.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            272,
        ),
        hi: BytePos(
            273,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/classPropertyAsPrivate.ts:13:5
   |
13 | var c: C;
   |     ^

